@@ -41,12 +41,11 @@
 
 #include <unistd.h>
 #include <string.h>
-#include <fcntl.h>
 #include "global.h"
 
 #define	OURBUFSIZ	160	/* renamed: avoid conflict with <stdio.h> */
 
-static char const rcsid[] = "$Id: logdir.c,v 1.3 2000/05/03 22:02:10 petr Exp $";
+static char const rcsid[] = "$Id: logdir.c,v 1.4 2001/07/05 16:47:04 broeker Exp $";
 
 static char line[OURBUFSIZ+1];
 
