@@ -30,7 +30,7 @@
  DAMAGE. 
  =========================================================================*/
 
-/* $Id: vp.h,v 1.3 2001/07/05 14:31:00 broeker Exp $ */
+/* $Id: vp.h,v 1.4 2002/01/04 12:11:50 broeker Exp $ */
 
 /*
  *	VPATH assumptions:
@@ -44,7 +44,15 @@
 
 #define MAXPATH	200		/* max length for entire name */
 
-#include <fcntl.h>
+#ifdef HAVE_CONFIG_H
+# include "config.h"
+#else
+# define HAVE_FCNTL_H 1		/* in case of doubt, assume it's there */
+#endif
+#ifdef HAVE_FCNTL_H
+# include <fcntl.h>		/* needed for O_... open flags */
+#endif
+
 #include <sys/stat.h>
 
 #if !NOMALLOC
